--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@apollo/server": "^4.9.0",
+    "graphql": "^16.7.1",
     "pg": "^8.11.1",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.17"
